<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/input_name"
        android:importantForAutofill="no"
         />

    <Button
        android:id="@+id/btn_to_second_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_second_activity"/>
    <Button
        android:id="@+id/btn_send_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_message"/>
    <Button
        android:id="@+id/btn_dial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial"/>
    <Button
        android:id="@+id/btn_open_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_link"/>

</LinearLayout>